--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
       "start": "node server.js"
     },
     "dependencies": {
-      "axios": "^1.4.0",
-      "cheerio": "^1.0.0-rc.12",
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "fs-extra": "^11.1.1",
-      "puppeteer": "^21.8.1",
-      "archiver": "^6.0.2"
+      "axios": "latest",
+      "cheerio": "latest",
+      "cors": "latest",
+      "express": "latest",
+      "fs-extra": "latest",
+      "puppeteer": "latest",
+      "archiver": "latest"
     },
     "engines": {
       "node": ">=20"
